project (svo2014)
cmake_minimum_required(VERSION 3.14)
OPTION(testing_enabled "add test target(make test)" ON)
OPTION(TRACE_OUTPUT "Trace Output" ON)
OPTION(DEBUG_OUTPUT "Debug Output" OFF)

find_package(Eigen3 REQUIRED)
find_package(OpenCV  REQUIRED)
find_package(Threads REQUIRED)
FIND_PACKAGE(Boost REQUIRED COMPONENTS thread system)

ADD_DEFINITIONS(-DDATA_DIR=\"${PROJECT_SOURCE_DIR}/data/\")
IF(${TRACE})
    ADD_DEFINITIONS(-DSVO_TRACE)
ENDIF()
IF(${DEBUG_OUTPUT})
    ADD_DEFINITIONS(-DSVO_DEBUG_OUTPUT)
ENDIF()
IF(${testing_enabled})
    ENABLE_TESTING()
    add_subdirectory(test)
ENDIF()